@@ -98,7 +98,8 @@ struct cli_ac_node {
 };
 
 struct cli_md5_node {
-    char *virname, *viralias, *md5;
+    char *virname, *viralias;
+    unsigned char *md5;
     unsigned int size;
     struct cli_md5_node *next;
 };
